--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://vamsikrishnamangu.github.io/LaunchIAM",
   "name": "launch_iam",
   "version": "0.1.0",
   "private": true,
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
