feat: secure url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://vamsikrishnamangu.github.io/LaunchIAM",
+  "homepage": "https://vamsikrishnamangu.github.io/LaunchIAM",
   "name": "launch_iam",
   "version": "0.1.0",
   "private": true,
